--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest=index.appcache>
+<html>
     <head>
         <title>solsort.com</title>
         <link rel="manifest" href="/index.manifest.json">
