--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <body>
         <div id=main></div>
         <script src=index.js></script>
+        <script src=//incoming.solsort.com/log.js?www></script>
     </body>
 </html>
